samples/_failures_safe/1761283184_7dbaaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_551479e6.c: In function ‘main’:
./samples/SAFE/__tmp_551479e6.c:170: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_551479e6.c:169:5: error: expected declaration or statement at end of input
  169 |     if
      |     ^~
